<resources>
    <string name="app_name">Mors</string>
    <string name="app_title">Morse</string>
    <string name="buttonTranslateText">Translate</string>
    <string name="buttonAlphabetText">Alphabet</string>
    <string name="Translator">Translator</string>
    <string name="hint">Input some text here</string>
    <string name="emptyInput">Please enter some English text.</string>
    <string name="preText">Tour Morse translation here...</string>
    <string name="logo">-- --- .-. ... .</string>
    <string name="e">e</string>
</resources>